Spacing Issues

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 
 img {
     border-radius: 10px;
-    margin-bottom: var(--sp-200);
+    margin-bottom: var(--sp-300);
 }
 
 h1 {
